# secure-program-synthesis

./: README.md  pyproject.toml
artifacts/demo/: normalized_samples.json  report.html  results.json  spec_samples.json
artifacts/live/: normalized_samples.json  report.html  results.json
artifacts/live-final/: normalized_samples.json  report.html  results.json
artifacts/live-fresh/: normalized_samples.json  report.html  results.json
hackathon-docs/: Copy of Apart Research hackathon submission template.md  hackathon-description.md  hackathon-guidelines.md  hackathon-resources.md  submission-outline.md  track-2-winning-plan.md
scripts/: generate_specs.py  normalize_to_lean.py
spspec/: __init__.py  core.py  pipeline.py
tests/: test_pipeline.py
viz/: report.html
