[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-program-synthesis-hackathon"
version = "0.1.0"
description = "Cross-model specification comparison pipeline for the Secure Program Synthesis Hackathon"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["spspec"]
